Corrected margin for the right align class.

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -334,7 +334,7 @@ span.minus {
 
 .right-align {
   float: right;
-  margin: 10px 0 10px 10px;
+  margin: 6px 0 10px 10px;
 }
 
 /* Home */
